--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -5,11 +5,10 @@
     </HEAD>
     <BODY>
         <H1>States</H1>
-        <UL> {% for state in state_dict.values()|sort(attribute='name') %}
-
-	  <LI>{{state.id}}: <B>{state.name}}</B></LI>
+        <UL>
+	  {% for state in state_dict.values()|sort(attribute='name') %}
+	  <LI>{{state.id}}: <B>{{state.name}}</B></LI>
 	  {% endfor %}
-
 	</UL>
     </BODY>
 </HTML>
