--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -4,7 +4,7 @@
         <TITLE>HBNB</TITLE>
     </HEAD>
     <BODY>
-      {% if state_id %}
+      {% if state_id is not none %}
       <H1>State: {{state_name}}</H1>
       <H3>Cities:</H3>
       <UL>
